--- a/faq/index.html
+++ b/faq/index.html
@@ -440,7 +440,7 @@
       The World Affairs Conference website, made by the WAC team with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
     </p>
     <p>
-      Have any questions or concerns? Check out <a class="white-icon" href="/faq/" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="/contact/" style="text-decoration:underline;">get in touch with us!</a>
+      Have any questions or concerns? Check out <a class="white-icon" href="../faq/index.html" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="../contact/index.html" style="text-decoration:underline;">get in touch with us!</a>
     </p>
     <a href="mailto:wac@ucc.on.ca"><span class="fa fa-fw fa-2x fa-envelope white-icon"></span></a>
     <a href="https://www.facebook.com/worldaffairsconference/"><span class="fab fa-fw fa-2x fa-facebook white-icon"></span></a>
