--- a/schedule/index.html
+++ b/schedule/index.html
@@ -76,7 +76,7 @@
       <div class="container">
   <div class="card card-body">
     <h1 class="text-center">WAC 2018 Schedule</h1>
-    <p class="text-center">(<a href="/files/schedule_2018.pdf">PDF copy</a>)</p>
+    <p class="text-center">(<a href="../files/schedule_2018.pdf">PDF copy</a>)</p>
     <h2 class="text-center mt-2">Keynote Address</h2>
     <div class="table-responsive">
       <table class="table table-hover my-4">
@@ -135,7 +135,7 @@
     	    <tr>
     	      <td>First Session</td>
     	      <td>10:10 to 11:15</td>
-    	      <td>Check your nametag for <a href="/plenaries">plenary</a> details</td>
+    	      <td>Check your nametag for <a href="../plenaries/index.html">plenary</a> details</td>
     	    </tr>
     	    <tr>
     	      <td>Break</td>
@@ -145,7 +145,7 @@
     	    <tr>
     	      <td>Second Session</td>
     	      <td>11:25 to 12:30</td>
-    	      <td>Check your nametag for <a href="/plenaries">plenary</a> details</td>
+    	      <td>Check your nametag for <a href="../plenaries/index.html">plenary</a> details</td>
     	    </tr>
     	    <tr>
     	      <td>Lunch</td>
@@ -155,7 +155,7 @@
     	    <tr>
     	      <td>Third Session</td>
     	      <td>1:15 to 2:20</td>
-    	      <td>Check your nametag for <a href="/plenaries">plenary</a> details</td>
+    	      <td>Check your nametag for <a href="../plenaries/index.html">plenary</a> details</td>
     	    </tr>
     	    <tr>
     	      <td>Closing Address</td>
@@ -176,7 +176,7 @@
       The World Affairs Conference website, made by the WAC team with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
     </p>
     <p>
-      Have any questions or concerns? Check out <a class="white-icon" href="/faq/" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="/contact/" style="text-decoration:underline;">get in touch with us!</a>
+      Have any questions or concerns? Check out <a class="white-icon" href="../faq/index.html" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="../contact/index.html" style="text-decoration:underline;">get in touch with us!</a>
     </p>
     <a href="mailto:wac@ucc.on.ca"><span class="fa fa-fw fa-2x fa-envelope white-icon"></span></a>
     <a href="https://www.facebook.com/worldaffairsconference/"><span class="fab fa-fw fa-2x fa-facebook white-icon"></span></a>
