Reconciliation and data plenaries added(short bio and plen image missing)

--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -162,7 +162,31 @@
         </div>
       </div>
   </div>
-  
+    
+  <div class="card-deck mt-2">
+    <div class="card card-body">
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="../img/plen/nuclear.svg" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <a href="../plenaries/data.html"><h4 class="card-title">Data Daycare</h4></a>
+            <p class="card-text">Are nuclear weapons still threats? Who should have access to them? How do they impact foreign relations and power dynamics?</p>
+          </div>
+        </div>
+      </div>
+      <div class="card card-body">
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="../img/plen/nuclear.svg" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <a href="../plenaries/reconciliation.html"><h4 class="card-title">Reconciliation and Indigenization</h4></a>
+            <p class="card-text">Are nuclear weapons still threats? Who should have access to them? How do they impact foreign relations and power dynamics?</p>
+          </div>
+        </div>
+      </div>
+  </div>
 </div>
 
 
