Updated Plen Hub

--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -67,11 +67,6 @@
 </nav>
 
 
-    <div class="container">
-      <div class="alert alert-info" role="alert">
-        Thanks for coming to WAC 2018! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
-      </div>
-    </div>
 
       <div class="container">
   <div class="card card-body">
@@ -83,11 +78,11 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="../img/plen/china.png" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="../plenaries/china.html"><h4 class="card-title">China and Africa's New Era</h4></a>
-            <p class="card-text">Will the 21st century belong to China? How is China extending its influence in the developing world? How will it impact the rest of the world and its power dynamics?</p>
+            <a href="../plenaries/china.html"><h4 class="card-title">The EU’s Midlife Crisis</h4></a>
+            <p class="card-text">What happened to get EU to this pivotal stage? What will be the long term impacts of crises affecting the EU, such as Brexit or the migrant situation? Will the EU endure as the strong political force it is today? </p>
           </div>
         </div>
       </div>
@@ -97,39 +92,12 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="../img/plen/crypto.svg" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="../plenaries/crypto.html"><h4 class="card-title">Cryptocurrencies: Friend or Foe</h4></a>
-            <p class="card-text">What are their benefits and harms? How have they changed commerce and transactions? How are countries and central banks evolving and even switching to cryptocurrencies?</p>
-          </div>
-        </div>
-      </div>
-  </div>
-  
-  <div class="card-deck mt-2">
-      <div class="card card-body">
-        <div class="row">
-          <div class="col-sm-4">
-            <img class="img-fluid" src="../img/plen/drug.svg" alt="{plenary.title} picture"/>
-          </div>
-          <div class="col-sm-8">
-            <a href="../plenaries/drugs.html"><h4 class="card-title">Drug Legalization in a Progressive World</h4></a>
-            <p class="card-text">Societies are already legalizing marijuana at growing rates. Does this provide more harms than benefits? As well, this opens the debate to legalizing other drugs. Where should governments/societies draw the line?</p>
-          </div>
-        </div>
-      </div>
-  
-  
-  
-      <div class="card card-body">
-        <div class="row">
-          <div class="col-sm-4">
-            <img class="img-fluid" src="../img/plen/earth.png" alt="{plenary.title} picture"/>
-          </div>
-          <div class="col-sm-8">
-            <a href="../plenaries/earth.html"><h4 class="card-title">The Global Food Crisis</h4></a>
-            <p class="card-text">What will we need to do to accommodate for a growing population on a planet with diminishing resources? GMO’s? New technology? Better policy?</p>
+            <a href="../plenaries/crypto.html"><h4 class="card-title">Startup Cleanup</h4></a>
+            <p class="card-text">How can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system? How do people fit into the controversial connection between profit and the planet?
+</p>
           </div>
         </div>
       </div>
@@ -139,11 +107,11 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="../img/plen/feminism.png" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="../plenaries/feminism.html"><h4 class="card-title">The Changing Face of Feminism</h4></a>
-            <p class="card-text">How should the feminist movement act in order to progress? What needs development the most?</p>
+            <a href="../plenaries/drugs.html"><h4 class="card-title">Data Daycare</h4></a>
+              <p class="card-text">What is the right ethical framework to make decisions about the deployment of automation/AI? How should we think about such things? As we adopt new technologies, who is responsible for the impact of those technologies? </p>
           </div>
         </div>
       </div>
@@ -153,41 +121,45 @@
       <div class="card card-body">
         <div class="row">
           <div class="col-sm-4">
-            <img class="img-fluid" src="../img/plen/nuclear.svg" alt="{plenary.title} picture"/>
+            <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
           </div>
           <div class="col-sm-8">
-            <a href="../plenaries/nuclear.html"><h4 class="card-title">Nuclear Weapons: Obsolete or the Future</h4></a>
-            <p class="card-text">Are nuclear weapons still threats? Who should have access to them? How do they impact foreign relations and power dynamics?</p>
+            <a href="../plenaries/earth.html"><h4 class="card-title">The Plight of Workers’ Rights</h4></a>
+            <p class="card-text">How do large corporations deal with smaller internal issues regarding workers’ rights within the companies most effectively? Has the democratic vaules of the workplace been reduced over the past few decades? </p>
+          </div>
+        </div>
+      </div>
+  </div>
+  
+  <div class="card-deck mt-2">
+      <div class="card card-body">
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <a href="../plenaries/feminism.html"><h4 class="card-title">Reconciliation and Indigenization</h4></a>
+            <p class="card-text">What is the role of Canadian society in Truth and Reconciliation? How have attitudes about the Indigenous changed since the abolishment of residential schools? </p>
+          </div>
+        </div>
+      </div>
+  
+  
+  
+      <div class="card card-body">
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="../img/wac_logo.svg" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <a href="../plenaries/nuclear.html"><h4 class="card-title">Popular Defiance</h4></a>
+            <p class="card-text">How has the power of social media impacted the current landscape of political thought and activism? Will the ability for unconventional and/or niche individuals to gain followings have a positive or negative impact on our world?
+              </p>
           </div>
         </div>
       </div>
   </div>
     
-  <div class="card-deck mt-2">
-    <div class="card card-body">
-        <div class="row">
-          <div class="col-sm-4">
-            <img class="img-fluid" src="../img/plen/nuclear.svg" alt="{plenary.title} picture"/>
-          </div>
-          <div class="col-sm-8">
-            <a href="../plenaries/data.html"><h4 class="card-title">Data Daycare</h4></a>
-            <p class="card-text">Are nuclear weapons still threats? Who should have access to them? How do they impact foreign relations and power dynamics?</p>
-          </div>
-        </div>
-      </div>
-      <div class="card card-body">
-        <div class="row">
-          <div class="col-sm-4">
-            <img class="img-fluid" src="../img/plen/nuclear.svg" alt="{plenary.title} picture"/>
-          </div>
-          <div class="col-sm-8">
-            <a href="../plenaries/reconciliation.html"><h4 class="card-title">Reconciliation and Indigenization</h4></a>
-            <p class="card-text">Are nuclear weapons still threats? Who should have access to them? How do they impact foreign relations and power dynamics?</p>
-          </div>
-        </div>
-      </div>
-  </div>
-</div>
 
 
 
