Add The EU’s Midlife Crisis
TODO: Get WAC ppls to find better photos due to quality

--- a/plenaries/china.html
+++ b/plenaries/china.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>China and Africa&#39;s New Era | The World Affairs Conference</title>
+  <title>The EU&#39;s Midlife Crisis  | The World Affairs Conference</title>
   <meta name="description" content="Africa experiences the fastest growing demography and economy in the world; its need for foreign investment makes the continent a target for all companies an...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
@@ -74,12 +74,11 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>China and Africa's New Era</h1>
-						<img class="img-fluid plenary-img" src="../img/plen/china.png" alt="China and Africa's New Era picture"/>
+						<h1>The EU's Midlife Crisis</h1>
+						<img class="img-fluid plenary-img" src="../img/wac_logo.svg" alt="The EU's Midlife Crisis picture"/>
 						<p class="card-text">
-							<p>Africa experiences the fastest growing demography and economy in the world; its need for foreign investment makes the continent a target for all companies and nations that seek new market possibilities. Over the last decade, investing into mines, roads, airports, hospitals, highways, and dams, China has become one of Africa’s biggest trading partners. As skepticism about its intentions in increasing economic, cultural, and, therefore, political presence in the continent, the plenary questions its positive and negative, short-term and long-term implications. At a moment in time when President Trump puts America first, Sino-African relations not only shape the African continent, but the nature of international affairs.</p>
+							<p>The EU is fighting off a midlife crisis. With key issues such as Brexit and debt affecting member countries, the EU is facing a serious reckoning. Currently, they are at a crossroads that will dictate not only the future of millions, but also the direction of our new decade. How did the EU get here, and where will they go? </p>
 
-						</p>
 						<p class="card-text">
 							More information on plenaries and programs are coming soon.
 						</p>
@@ -90,24 +89,22 @@
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/rpulfer.jpg" alt="Rachel Pulfer">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/thuizinga.jpg" alt="Todd Huizinga">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Rachel Pulfer</h2>
-						Rachel Pulfer has led Journalists for Human Rights since October 2011. On her watch, JHR has launched new programming in Canada, Tanzania, Jordan, South Sudan, Syria and most recently in South Africa, and built strong partnerships with both media and universities to implement this work. Prior to taking over as Executive Director, Pulfer managed media development projects in Sierra Leone, Liberia and the Democratic Republic of the Congo.
-Pulfer came to JHR from an award-winning career in journalism: she was a Canadian Journalism Fellow at Massey College, building on a 10-year career in magazine journalism. She was the U.S. correspondent, editorial board member, and columnist for Canadian Business – Canada's national business news magazine, and previously worked at Azure and the Montreal Gazette. She appears regularly on panels on journalism and foreign affairs, including at the Banff Forum and providing input to Parliamentary committees, and as a commentator on CTV National News. Her journalism and op-eds have appeared in the Toronto Star, the Globe and Mail, the Walrus, Toronto Life, the Toronto Star, the Globe and Mail, the Ottawa Citizen and Maclean's.
-As a humanitarian who grew up in Swaziland, Lesotho and Papua New Guinea, Pulfer believes JHR’s mission – empowering journalists to cover local human rights issues ethically and effectively – is an excellent way to put her profession to work for a greater good. She is delighted to be part of making that mission a reality.
+						<h2 class="text-center text-md-left">Todd Huizinga</h2>
+						Todd Huizinga is a former American diplomat who served for 20 years. Notably, Mr. Huizinga spearheaded US involvement at the prestigious 2011 Munich Security Conference. Following his diplomatic career, he co-established the Transatlantic Christian Council, a nonprofit organization which promotes civic virtue, limited government, and individual freedoms in Europe as well as North America. He is also an active public speaker, with appearances on worldwide media outlets such as the BBC. In 2016, Mr. Huizinga authored the book “The New Totalitarian Temptation”, which discusses EU reforms as well as the philosophical principles behind them. Currently, he is a senior research fellow at Calvin College in Grand Rapids, Michigan.
+
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/rmedhora.jpg" alt="Rohinton P. Medhora">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/mpanezi.png" alt="Maria Panezi">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Rohinton P. Medhora</h2>
-						Rohinton P. Medhora is president of the Centre for International Governance Innovation (CIGI), joining in 2012. He served on CIGI's former International Board of Governors from 2009 to 2014. Previously, he was vice president of programs at Canada’s International Development Research Centre.
-Rohinton received his doctorate in economics in 1988 from the University of Toronto, where he also subsequently taught for a number of years. In addition to his Ph.D., Rohinton earned his B.A. and M.A. at the University of Toronto, where he majored in economics. His fields of expertise are monetary and trade policy, international economic relations, aid effectiveness and development economics. He has published extensively on these issues in professional and non-technical journals, and produced two books: Finance and Competitiveness in Developing Countries (Routledge, 2001); and Financial Reform in Developing Countries (Macmillan, 1998), which he co-edited with José Fanelli. In 2013, he was co-editor of Canada-Africa Relations: Looking Back, Looking Ahead, which is volume 27 in the influential Canada Among Nations book series. In 2014, he co-edited International Development: Ideas, Experience, and Prospects (Oxford University Press) and Crisis and Reform: Canada and the International Financial System, which is volume 28 in the Canada Among Nations book series.
-Rohinton was recently named as a member of the Commission on Global Economic Transformation co-chaired by Nobel economics Laureates Michael Spence and Joseph Stiglitz. He serves on the boards of the Institute for New Economic Thinking, the Partnership for African Social and Governance Research and the Balsillie School of International Affairs and on the advisory boards of the McLuhan Centre at the University of Toronto and the WTO Chairs Program.
+						<h2 class="text-center text-md-left">Maria Panezi</h2>
+						Maria Panezi holds a PhD in law, and is an expert on the World Trade Organization. She has taught law and economics in universities around the world, and wrote her doctoral dissertation on transparency in the World Trade Organization. She is also an expert in trade and law internationally, which includes the European Union. She is currently a research fellow with the Centre for International Governance Innovation.
+
 					</div>
 				</div>
 			</div>
@@ -117,7 +114,6 @@ Rohinton was recently named as a member of the Commission on Global Economic Tra
 				</p>
 			</div>
 		</div>
-		</br>
 		<footer class="footer text-center mt-3">
   <div class="container">
     <p>
