--- a/plenaries/china.html
+++ b/plenaries/china.html
@@ -8,7 +8,7 @@
   <meta name="author" content="The World Affairs Conference">
 
   <title>The EU&#39;s Midlife Crisis  | The World Affairs Conference</title>
-  <meta name="description" content="Africa experiences the fastest growing demography and economy in the world; its need for foreign investment makes the continent a target for all companies an...">
+  <meta name="description" content="he EU is fighting off a midlife crisis. With key issues such as Brexit and debt affecting member countries, the EU is facing a serious reckoning...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
