--- a/plenaries/crypto.html
+++ b/plenaries/crypto.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>Cryptocurrencies: Friend or Foe | The World Affairs Conference</title>
-  <meta name="description" content="Cryptocurrency is an emerging technology changing the way we transact money. Or is it? Since the emergence of the first cryptocurrency (Bitcoin) in 2009, ban...">
+  <title>Startup Cleanup | The World Affairs Conference</title>
+  <meta name="description" content="Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system...">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="../img/android-icon-192x192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
@@ -74,15 +74,11 @@
 			<div class="text-center">
 				<div class="card">
 					<div class="card-body">
-						<h1>Cryptocurrencies: Friend or Foe</h1>
-						<img class="img-fluid plenary-img" src="../img/plen/crypto.svg" alt="Cryptocurrencies: Friend or Foe picture"/>
+						<h1>Startup Cleanup</h1>
+						<img class="img-fluid plenary-img" src="../img/wac_logo.svg" alt="Startup Cleanup"/>
 						<p class="card-text">
-							<p>Cryptocurrency is an emerging technology changing the way we transact money. Or is it? Since the emergence of the first cryptocurrency (Bitcoin) in 2009, banks have been on their feet to retain customers. Cryptocurrency is so different than any way we have ever managed our money because it is decentralized, meaning that no government owns cryptocurrencies, and therefore, no government can be in control of the currency. As well, cryptocurrencies can sustain transactions without ever having to use a bank.</p>
+							<p>Profit or Planet, the two most 'unrelated' economic topics a few decade ago, are now emergent as interrelated. While our economy remains relatively stable as the number of people living on the planet has experienced exponential growth in the past century, our planet is not ready to take the toll. Consequences of environment loss are dire, including scarcity of resources, loss of indigenous culture, lack of biodiversity, and the list goes on. Social entrepreneurship might be the solution to this problem, which is start-up companies that addresses social, cultural, or environmental issues. However, is that really enough? Can businesses abandon their profit motives to strive for a healthier planet with our current competitive economic system? How do people fit into the controversial connection between profit and the planet? Be prepared to be caught in the crossfire between the debated relationship of entrepreneurship and environment at People, Planet, Profit.</p>
 
-<p>But there are some questions we must ask, too. If there is no bank involved, who will ensure there isn’t any fraud? How can you track someone down if their transactions are anonymous?
-Our plenary prepares our generation - the first generation that will be fully immersed in this technology - for what we need to know to be prepared for the exponential increase of cryptocurrencies in the years to come.</p>
-
-						</p>
 						<p class="card-text">
 							More information on plenaries and programs are coming soon.
 						</p>
@@ -93,19 +89,19 @@ Our plenary prepares our generation - the first generation that will be fully im
 				<h1 class="text-center">Speakers</h1>
 				<div class="row pb-2">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/adiiorio.png" alt="Anthony Diiorio">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/Doosterman.png" alt="Dennon Oosterman">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Anthony Diiorio</h2>
-						Anthony Diiorio is a serial entrepreneur, VC, community organizer, and thought leader in the field of decentralized technologies. Born and raised in Toronto, Diiorio is the former Chief Digital Officer of the TMX Group and Toronto Stock Exchange, founder and CEO of Decentral, a software development company focused on blockchain technologies, and founder and CEO of Jaxx, a multi-token, blockchain interface that provides a unified experience across 9 platforms and devices. In 2013, Diiorio funded, and along with Vitalik Buterin and 3 others founded the smart contract platform Ethereum, which is the second largest cryptocurrency on the market today.
+						<h2 class="text-center text-md-left">Dennon Oosterman</h2>
+						Dennon Oosterman is known to be an innovator, inventor, leader, and entrepreneur. His Bachelor of Applied Science in Engineering Physics at the University of British Columbia and internships at Bell and Columbia Capital could not satisfy his need to provide to the environment. Dennon Oosterman is the Founder and CEO of ReDeTec, a company that develops recycling technology for 3D printers. He worked to develop the core technology, led all private and public funding efforts, and built his current team to what they are today. His dream is to empower businesses and educators with unlimited creative freedom through sustainable manufacturing. From research and development to product development and branding, building a business around innovative technology is what Oosterman does best.
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/vschmid.png" alt="Valentin Schmid">
+						<img class="img-fluid mx-auto d-block rounded" src="../img/speakers/ysheffi.jpg" alt="Yossi Sheffi">
 					</div>
 					<div class="col-md-8">
-						<h2 class="text-center text-md-left">Valentin Schmid</h2>
+						<h2 class="text-center text-md-left">Yossi Sheffi</h2>
 						Valentin Schmidis the business editor of the Epoch Times, an independent global news source headquartered in New York. His areas of expertise include global macroeconomic trends, financial markets, China, and Bitcoin. Before joining the paper in 2012, he worked as a portfolio manager for BNP Paribas, a retail banking company, in Amsterdam, London, Paris, and Hong Kong.
 					</div>
 				</div>
